force-app/main/default/objects/Test_Resource__c/Test_Resource__c.object-meta.xml
<CustomObject>
    <label>Test Resource</label>
    <nameField>
        <displayFormat>Resource {0000}</displayFormat>
        <label>Test Resource No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Resources</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>