force-app/main/default/objects/Test_Resource__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <formula>HYPERLINK(
  &#39;/&#39;&amp;Resource__r.Resource__c, 
  Resource__r.Resource__r.FirstName &amp;&#39; &#39;&amp; Resource__r.Resource__r.LastName 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>User</label>
    <type>Text</type>
</CustomField>